--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx || true",
-    "format": "prettier --write .",
-      "start": "node server/index.js"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.4.0",
